# AI-News-Verifier

./: README.md  pyproject.toml
app/: main.py  routes.py
app/services/: cache.py  embedder.py  extractor.py  formatter.py  news_fetcher.py  query_expander.py  ranker.py  reasoner.py
news-ui/: next.config.ts  package-lock.json  package.json
news-ui/app/: globals.css  layout.tsx  page.tsx
news-ui/app/components/: EvidenceSection.tsx  SearchBar.tsx  SkeletonLoader.tsx  SourceCard.tsx  StreamingResultPanel.tsx  VerdictBadge.tsx
news-ui/app/lib/: useVerifier.ts
news-ui/app/types/: index.ts
