[project]
name = "news-verifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "google-search-results>=2.1.0",
    "sentence-transformers>=3.0.0",
    "groq>=0.9.0",
]
